--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_API_KEY=api_key=9902c06f79b082f69e05ddc03d75d9ce
 VITE_API=https://api.themoviedb.org/3/movie/
-VITE_SEARCH=https://api.themoviedb.org/3/search/movie/
+VITE_SEARCH=https://api.themoviedb.org/3/search/movie
 VITE_IMG=https://image.tmdb.org/t/p/w500/
